--- a/index.html
+++ b/index.html
@@ -76,19 +76,27 @@
 		        <div class="overlay col-md-8 col-md-offset-2 pageMid">
 		          feel the power of geeks!<br />
 		          <!--<h3 >check my source code if you find fun</h3>-->
+					<ul class="soc">
+						<li><a class="soc-linkedin" href="https://www.linkedin.com/profile/view?id=AAIAABjAJQcBvRzw7FeGeiHs6GlCcABMlSXgqi4&trk=nav_responsive_tab_profile"></a></li>
+						<li><a class="soc-github" href="http://www.github.com/lee5214"></a></li>
+						<li><a class="soc-facebook" href="https://www.facebook.com/cong.li.144"></a></li>
+						<li><a class="soc-google" href="https://plus.google.com/101042153541057228878/posts"></a></li>
+						<li><a class="soc-twitter" href="http://www.twitter.com/lee5214"></a></li>
+						<li><a class="soc-pinterest soc-icon-last" href="https://www.pinterest.com/cli1584/"></a></li>
+					</ul>
 				</div>
 		      	</div>
 		      </div>
-		      
+
 		    </div>
 		    
 		    <div class="page page2" >
 		    	<div class="p2Block">
-		    		<div class=" col-md-12  pageMid">
+		    		<div class="  ">
 				        <h2>Hi, I'm Cong <br /><br />
 					        This is not just a personal website<br /><br />
 					        While learning web technology, I feel practice is the best way to improve.<br/><br />
-					        So you may find many "unnecessity" here, that's me found some interesting goodies and want to learn or share it.
+					        So you may find plenty of "unnecessary" here, that's me found some interesting goodies and want to learn or share it.
 				      	</h2>
 		      	</div>
 		      </div>
