--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						           \/____/                                           \/____/                                                           \/____/          \/____/         
 						                                                                                                                                                                
 		A human?
-		A human who knows how to check source code!
+		A human who is checking me!
 		Hey hey, nice to meet you~
 
 		-->
@@ -87,7 +87,6 @@
 				</div>
 		      	</div>
 		      </div>
-
 		    </div>
 		    
 		    <div class="page page2" >
@@ -95,7 +94,7 @@
 		    		<div class="  ">
 				        <h2>Hi, I'm Cong <br /><br />
 					        This is not just a personal website<br /><br />
-					        While learning web technology, I feel practice is the best way to improve.<br/><br />
+					        While learning web technology, I feel that practice is the best way to improve.<br/><br />
 					        So you may find plenty of "unnecessary" here, that's me found some interesting goodies and want to learn or share it.
 				      	</h2>
 		      	</div>
