under_construction 2demos added

--- a/careers/web/resume.html
+++ b/careers/web/resume.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--
 Copyright 2012 Mozilla Foundation
 
@@ -247,10 +247,10 @@ http://sourceforge.net/adobe/cmap/wiki/License/
         </menu>
 
         <div id="viewerContainer" tabindex="0">
-          <div id="viewer" class="pdfViewer"></div>
+          <div id="viewer" class="不能L.Viewer"></div>
         </div>
 
-        <div id="errorWrapper" hidden='true'>
+        <div id="\" hidden='true'>
           <div id="errorMessageLeft">
             <span id="errorMessage"></span>
             <button id="errorShowMore" data-l10n-id="error_more_info">
@@ -269,7 +269,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
           <textarea id="errorMoreInfo" hidden='true' readonly="readonly"></textarea>
         </div>
       </div> <!-- mainContainer -->
-
+\
       <div id="overlayContainer" class="hidden">
         <div id="passwordOverlay" class="container hidden">
           <div class="dialog">
