--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		        </svg>
 		        </span> <em>About</em> </a> </li>
 		        
-		      <li data-menu="services"> <a href="services.html"> <span>
+		      <li data-menu="services"> <a href="under_construction/pre-page.html"> <span>
 		        <svg class="nc-icon outline" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64">
 		          <g transform="translate(0, 0)">
 		            <line data-cap="butt" data-color="color-2" fill="none" stroke="#9e85d0" stroke-width="2" stroke-miterlimit="10" x1="46" y1="56" x2="58" y2="44" stroke-linejoin="square" stroke-linecap="butt"></line>
@@ -191,7 +191,7 @@
 		          </g>
 		        </svg>
 		        </span> <em>Services</em> </a> </li>
-		        <li data-menu="projects"> <a href="projects.html"> <span>
+		        <li data-menu="projects"> <a href="under_construction/pre-page.html"> <span>
 		        <svg class="nc-icon outline" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64">
 		          <g transform="translate(0, 0)">
 		            <polyline data-color="color-2" fill="none" stroke="#9e85d0" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points=" 22,12 22,4 42,4 42,12 " stroke-linejoin="square"></polyline>
@@ -204,7 +204,7 @@
 		          </g>
 		        </svg>
 		        </span> <em>Projects</em> </a> </li>
-		      <li data-menu="careers"> <a href="careers.html"> <span>
+		      <li data-menu="careers"> <a href="under_construction/pre-page.html"> <span>
 		        <svg class="nc-icon outline" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64">
 		          <g transform="translate(0, 0)">
 		            <polyline data-cap="butt" data-color="color-2" fill="none" stroke="#9e85d0" stroke-width="2" stroke-miterlimit="10" points="24,40 28,48 36,48 40,40 " stroke-linejoin="square" stroke-linecap="butt"></polyline>
@@ -217,7 +217,7 @@
 		          </g>
 		        </svg>
 		        </span> <em>Careers</em> </a> </li>
-		      <li data-menu="contact"> <a href="contact.html"> <span>
+		      <li data-menu="contact"> <a href="under_construction/pre-page.html"> <span>
 		        <svg class="nc-icon outline" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64">
 		          <g transform="translate(0, 0)">
 		            <polyline data-cap="butt" data-color="color-2" fill="none" stroke="#9e85d0" stroke-width="2" stroke-miterlimit="10" points="10,18 32,36 54,18 " stroke-linejoin="square" stroke-linecap="butt"></polyline>
