--- a/about/about.html
+++ b/about/about.html
@@ -204,8 +204,8 @@ body {
     </div></strong></p>
     <div id="block2" class="block">
       <div id="block2-2">
-        <p><b> 黄鹤，你王八蛋！你不是人！<br />
-          你还我血汗钱！<br />
+        <p><b> Just do IT<br />
+          <br />
           <b style="color:white;"><br />
           万水千山总是情<br />
           一炮半价行不行</b><br />
@@ -224,66 +224,7 @@ body {
       </div>
     <div id="block7" class="block" ></div>
   </section>
-  <div><br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-  
-
-
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+  <div>
   </div>
 </div>
 <script type="text/javascript" src="jquery/jQuery.mini.js"></script>
