--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="./reset.css" />
 <link rel="stylesheet" href="./bg.css" />
 <style type="text/css">
-@font-face{font-family:iron; src:url(/font/Iron.ttf);font-style:normal;font-weight:normal;}
-@font-face{font-family:matematica; src:url(/font/6-Matematica-Regular.otf);font-style:normal;font-weight:normal;}
+@font-face{font-family:iron; src:url(font/Iron.ttf);font-style:normal;font-weight:normal;}
+@font-face{font-family:matematica; src:url(font/6-Matematica-Regular.otf);font-style:normal;font-weight:normal;}
 body {
 	 Helvetica, Tahoma, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", STXihei, STHeiti, Heiti, SimSun, sans-serif; font-size:100%;
 	width: 100%;
@@ -132,74 +132,6 @@ top:-20%;
  <div id="block6" class="block" ></div>
   </section>
   <div><br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
   </div>
 </div>
 </body>
